fix: probleme d'overflow, and bg fixed in mobile (a priori)

--- a/_settings.scss
+++ b/_settings.scss
@@ -20,20 +20,14 @@ $grey : rgb(220,220,220);
 
 html {
     scroll-behavior: smooth;
-    width: 100vw;
     overflow-x: hidden;
   }
 
 body {
+    overflow: hidden;
     position: relative;
-    background-image: url("./assets/images/bg.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
     padding: 0 10%;
     margin: 0;
-    overflow-x: hidden;
     max-width: 1600px;
     &:before {
         content:"";
@@ -50,5 +44,18 @@ body {
                 opacity: 0;
             }
         }
+    }
+    .fixed-background {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url("./assets/images/bg.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        z-index: -1;
+
     }
 }
