--- a/index.css
+++ b/index.css
@@ -8,20 +8,14 @@
 }
 html {
   scroll-behavior: smooth;
-  width: 100vw;
   overflow-x: hidden;
 }
 
 body {
+  overflow: hidden;
   position: relative;
-  background-image: url("./assets/images/bg.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center;
   padding: 0 10%;
   margin: 0;
-  overflow-x: hidden;
   max-width: 1600px;
 }
 body:before {
@@ -46,6 +40,18 @@ body:before {
   to {
     opacity: 0;
   }
+}
+body .fixed-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("./assets/images/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
 }
 
 header {
